# aiss-2024

./: .gitignore  README.md  justfile  pyproject.toml
notebooks/: 00-python_intro.ipynb  01-explore.ipynb  02-mnist.ipynb
src/ice/: __init__.py  animals.py  eval.py  trainer.py  utils.py
tests/: test_find_device.py
