[project]
name = "ice"
version = "0.1.0"
description = "Hands-on introduction to Deep Learning and computer vision with Python!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
]

[project.optional-dependencies]
test = [
    "coverage>=7.6.1",
    "pytest>=8.3.2",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.4",
]

[tool.pyright]
exclude = [
  ".venv",
]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
