[project]
name = "ice"
version = "0.1.0"
description = "Hands-on introduction to Deep Learning and computer vision with Python!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "transformers>=4.44.2",
    "umap-learn>=0.5.6",
    "scikit-learn>=1.5.1",
    "pandas>=2.2.2",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
test = [
    "coverage>=7.6.1",
    "pytest>=8.3.2",
]

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.4",
]

[tool.ruff.lint]
extend-select = ["UP", "I", "TCH"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["I002"]
"notebooks/*.ipynb" = ["I002"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["illimity.leo"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.pyright]
exclude = [
  ".venv",
]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
